# spy-momentum-backtest

./: .gitignore  Cargo.toml  README.md
data/: spy.csv  spy_raw.json
report/: index.html
src/: lib.rs  main.rs
